tests/ui/bad-version.stderr
error: expected rustc release number, like 1.31
 --> $DIR/bad-version.rs:1:23
  |
1 | #[rustversion::stable(nightly)]
  |                       ^^^^^^^
