tests/ui/bad-version.rs
#[rustversion::stable(nightly)]
struct S;

fn main() {}
